    DOMDocument::registerNodeClass()). (Laruence) 

- FPM:
  . Fixed bug #70538 ("php-fpm -i" crashes). (rainer dot jung at
    kippdata dot de)
  . Fixed bug #70279 (HTTP Authorization Header is sometimes passed to newer
    reqeusts). (Laruence)

- OpenSSL
  . Require at least OpenSSL version 0.9.8. (Jakub Zelenka)
  . Fixed bug #68312 (Lookup for openssl.cnf causes a message box). (Anatol)

- Session:
  . Fixed bug #70529 (Session read causes "String is not zero-terminated" error).
    (Yasuo)

- XMLRPC
  . Fixed bug #70526 (xmlrpc_set_type returns false on success). (Laruence)

- XSL:
  . Fixed bug #70535 (XSLT: free(): invalid pointer). (Laruence)

17 Sep 2015, PHP 7.0.0 RC 3

- Core:
  . Fixed bug #70431 (Memory leak in php_ini.c). (Senthil, Laruence)
  . Fixed bug #70478 (**= does no longer work). (Bob)

- CLI server:
  . Fixed bug #68291 (404 on urls with '+'). (cmb)

- DOM:
  . Fixed bug #70001 (Assigning to DOMNode::textContent does additional entity
    encoding). (cmb)

- Intl:
  . Fixed bug #70453 (IntlChar::foldCase() incorrect arguments and missing
    constants). (cmb)
  . Fixed bug #70454 (IntlChar::forDigit second parameter should be optional).
    (cmb, colinodell)

- Mysqlnd:
  . Fixed bug #70456 (mysqlnd doesn't activate TCP keep-alive when connecting to
    a server). (Sergei Turchanov)

- Opcache:
  . Fixed bug #70423 (Warning Internal error: wrong size calculation). (Anatol)

- OpenSSL
  . Fixed bug #55259 (openssl extension does not get the DH parameters from
    DH key resource). (Jakub Zelenka)
  . Fixed bug #70395 (Missing ARG_INFO for openssl_seal()). (cmb)
  . Fixed bug #60632 (openssl_seal fails with AES). (Jakub Zelenka)
  . Implemented FR #70438 (Add IV parameter for openssl_seal and openssl_open)
    (Jakub Zelenka)

- Phpdbg:
  . Fixed bug #70449 (PHP won't compile on 10.4 and 10.5 because of missing
    constants). (Bob)

- Session:
  . Fixed bug #70013 (Reference to $_SESSION is lost after a call to