@@ -1379,6 +1379,32 @@ ZEND_API ZEND_COLD void zend_output_debug_string(zend_bool trigger_break, const 
 }
 /* }}} */
 
+ZEND_API void zend_try_exception_handler() /* {{{ */
+{
+	if (EG(exception)) {
+		if (Z_TYPE(EG(user_exception_handler)) != IS_UNDEF) {
+			zval orig_user_exception_handler;
+			zval params[1], retval2;
+			zend_object *old_exception;
+			old_exception = EG(exception);
+			EG(exception) = NULL;
+			ZVAL_OBJ(&params[0], old_exception);
+			ZVAL_COPY_VALUE(&orig_user_exception_handler, &EG(user_exception_handler));
+
+			if (call_user_function_ex(CG(function_table), NULL, &orig_user_exception_handler, &retval2, 1, params, 1, NULL) == SUCCESS) {
+				zval_ptr_dtor(&retval2);
+				if (EG(exception)) {
+					OBJ_RELEASE(EG(exception));
+					EG(exception) = NULL;
+				}
+				OBJ_RELEASE(old_exception);
+			} else {
+				EG(exception) = old_exception;
+			}
+		}
+	}
+} /* }}} */
+
 ZEND_API int zend_execute_scripts(int type, zval *retval, int file_count, ...) /* {{{ */
 {
 	va_list files;
@@ -1401,30 +1427,9 @@ ZEND_API int zend_execute_scripts(int type, zval *retval, int file_count, ...) /
 		if (op_array) {
 			zend_execute(op_array, retval);
 			zend_exception_restore();
+			zend_try_exception_handler();
 			if (EG(exception)) {
-				if (Z_TYPE(EG(user_exception_handler)) != IS_UNDEF) {
-					zval orig_user_exception_handler;
-					zval params[1], retval2;
-					zend_object *old_exception;
-					old_exception = EG(exception);
-					EG(exception) = NULL;
-					ZVAL_OBJ(&params[0], old_exception);
-					ZVAL_COPY_VALUE(&orig_user_exception_handler, &EG(user_exception_handler));
-
-					if (call_user_function_ex(CG(function_table), NULL, &orig_user_exception_handler, &retval2, 1, params, 1, NULL) == SUCCESS) {
-						zval_ptr_dtor(&retval2);
-						if (EG(exception)) {
-							OBJ_RELEASE(EG(exception));
-							EG(exception) = NULL;
-						}
-						OBJ_RELEASE(old_exception);
-					} else {
-						EG(exception) = old_exception;
-						zend_exception_error(EG(exception), E_ERROR);
-					}
-				} else {
-					zend_exception_error(EG(exception), E_ERROR);
-				}
+				zend_exception_error(EG(exception), E_ERROR);
 			}
 			destroy_op_array(op_array);
 			efree_size(op_array, sizeof(zend_op_array));
