@@ -98,11 +98,11 @@ stream_set_blocking(STDIN, true);
 
 print "\n";
 if (!isset($name)) {
-	print "Specifiy the test description: ";
+	print "Specify the test description: ";
 	$desc = trim(fgets(STDIN));
 }
 while (!isset($testfile)) {
-	print "Specifiy the test file name (leave empty to write to stderr): ";
+	print "Specify the test file name (leave empty to write to stderr): ";
 	$testfile = trim(fgets(STDIN));
 	if ($testfile != "" && file_exists($testfile)) {
 		print "That file already exists. Type y or yes to overwrite: ";
